# pywhispercpp

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  MANIFEST.in  README.md  index.html  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/workflows/: wheels.yml
pywhispercpp/: __init__.py  _logger.py  constants.py  model.py  utils.py
search/: search_index.json
src/: main.cpp
src/whispercpp/: logging.py  model.py
