[project]
name = "pywhispercpp"
version = "1.4.0"
description = "Python bindings for whisper.cpp"
authors = [
  { name = "absadiki" },
  { name = "benniekiss" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "libggml-python",
]

[project.urls]
Source = "https://github.com/benniekiss/pywhispercpp"
Tracker = "https://github.com/benniekiss/pywhispercpp/issues"

[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "pybind11>=2.13.6",
  "libggml-python",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
wheel.packages = ["pywhispercpp"]
wheel.install-dir = "pywhispercpp"
sdist.include = ["whisper.cpp/"]

[tool.scikit-build.cmake.define]
WHISPER_USE_SYSTEM_GGML = "ON"

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.ruff]
extend-select = [
  "B",    # flake8-bugbear
  "B904",
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py310"
