[project]
name = "whispercpp-python"
version = "0.1.0"
description = "Python bindings for whisper.cpp"
authors = [
  { name = "benniekiss" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "libggml-python",
]

[project.urls]
Source = "https://github.com/benniekiss/whispercpp-python"
Tracker = "https://github.com/benniekiss/whispercpp-python/issues"

[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "nanobind>=2.7.0",
  "libggml-python",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
wheel.packages = ["whispercpp-python"]
wheel.install-dir = "whispercpp-python"
sdist.include = ["whisper.cpp/"]

[tool.scikit-build.cmake.define]
WHISPER_USE_SYSTEM_GGML = "ON"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
disable_error_code = [
    "import-not-found",
    "import-untyped"
]
