[project]
name = "pywhispercpp"
version = "1.4.1"
description = "Python bindings for whisper.cpp"
authors = [
  { name = "absadiki" },
  { name = "benniekiss" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "libggml-python",
]

[project.urls]
Source = "https://github.com/benniekiss/pywhispercpp"
Tracker = "https://github.com/benniekiss/pywhispercpp/issues"

[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "nanobind~=2.10.2",
  "libggml-python~=0.9.5",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
wheel.packages = ["pywhispercpp"]
wheel.install-dir = "pywhispercpp"
sdist.include = ["whisper.cpp/"]

[tool.scikit-build.cmake.define]
WHISPER_USE_SYSTEM_GGML = "ON"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
disable_error_code = [
    "import-not-found",
    "import-untyped"
]
